tests/error/invalid_array_acces.gw
// [contains] invalid array acces expression
int j[];
j[1,2,3,4] @=> i;
